# planner-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package.json
.github/workflows/: build-check.yml
backend/: .dockerignore  Dockerfile  README.md  main.py  mcp.Dockerfile  mcp_server.py  pyproject.toml
backend/app/: database.py  main.py
backend/app/auth/: token.py
backend/app/mcp-server/: server.py
backend/app/models/: __init__.py  academic.py  behavior.py  course.py  logging.py  schedule.py  student.py
backend/app/or_tools/: README.md  main.py  optimizer.py  router.py  schemas.py  service.py  utils.py
backend/app/routers/: __init__.py  ai_assistant.py  auth.py  chat.py  courses.py  dashboard.py  survey.py  tasks.py  user.py
backend/app/schemas/: student.py  survey.py
behavior_analyzer/: Dockerfile  main.py  pyproject.toml
behavior_analyzer/app/: database.py  main.py
behavior_analyzer/app/ml/: feature_extraction.py  models.py
behavior_analyzer/app/models/: reflected_models.py  session.py
behavior_analyzer/app/routers/: behavior.py
behavior_analyzer/app/schemas/: behavior.py
course-sync/: .dockerignore  Dockerfile  main.py  pyproject.toml  scraper.py  sync.py
db/: queries.sql
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/Login-Signup/: LoginPage.jsx  SignupPage.jsx
frontend/src/components/: LandingPage.jsx
frontend/src/components/Dashboard/: Dashboard.css  Dashboard.jsx
frontend/src/components/Home/: Home.jsx  Home.module.css
frontend/src/components/InfoSidebar/: InfoSidebar.jsx  InfoSidebar.module.css
frontend/src/components/LandingPage/: LandingPage.css
frontend/src/components/Login-Signup/: AuthPages.css  LoginPage.jsx
frontend/src/components/MaterialsQuiz/: MaterialsQuiz.css  MaterialsQuizPage.jsx  StudyTimeEstimator.jsx
iep-behavior_analyzer/: Dockerfile  README.md  docker-compose.monitoring.yml  docker-compose.yml  prometheus.yml  pyproject.toml
iep-behavior_analyzer/app/: database.py  main.py  monitoring.py
iep-behavior_analyzer/app/ml/: feature_engineering.py  model_training.py  recommendation.py
iep-behavior_analyzer/app/models/: __init__.py  behavior.py
iep-behavior_analyzer/app/routers/: behavior.py
iep-behavior_analyzer/app/schemas/: behavior.py
iep-behavior_analyzer/app/scripts/: compute_aggregates.py  train_models.py
iep-behavior_analyzer/app/tasks/: periodic.py
iep-behavior_analyzer/grafana/provisioning/dashboards/: api-monitoring.json  dashboard.yml
iep-behavior_analyzer/tests/: test_behavior.py
iep-quiz/: Dockerfile  README.md  main.py  pyproject.toml
mcp_client/: Dockerfile  main.py  pyproject.toml
mcp_client/app/: main.py  mcp_client_manager.py
mcp_server/: Dockerfile  main.py  pyproject.toml
mcp_server/app/: auth.py  database.py  main.py
mcp_server/app/models/: reflected_models.py
or_tools/: README.md  optimizer.py  router.py  schemas.py  service.py  utils.py
src/Login-Signup/: LoginPage.jsx
src/components/Survey/: Survey.css
(+11 files in other folders)
