[project]
name = "planner-ai-backend"
version = "0.1.0"
description = "Student Planner AI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-extra-types>=2.0.0",
    "email-validator>=2.0.0",
    "lightgbm>=3.3.5",
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "celery>=5.3.0",
    "redis>=4.6.0",
    "mlflow>=2.8.0",
    "prometheus-client>=0.17.0",
    "prometheus-fastapi-instrumentator>=6.1.0"
]